# cpp-blade

./: .gitmodules  CMakeLists.txt  README.md  SUMMARY.md  build.md  copyrights.md  license.md  main.cpp  main.h  setting-up.md  settings.json  usage.md  vcpkg.json
docs/: data-types.md  initialization.md  public-methods.md  usage.md
drafts/: accountHelper.cpp  apiService.cpp  app.cpp
include/: BladeSDK.h  main.h  types.h
include/enum/: Enums.h
include/model/: enums.h  types.h
include/service/: accountService.h  apiService.h  fingerprintService.h  securityService.h  utilService.h
service/: accountService.cpp  accountService.h  apiService.cpp  apiService.h
src/: BladeSDK.cpp  main.cpp
src/model/: enums.cpp  types.cpp
src/service/: accountService.cpp  apiService.cpp  fingerprintService.cpp  securityService.cpp  utilService.cpp
